Blender 2.75 test build crashes on render - Blender internal - 2.74 renders this scene ok #44979

Closed
opened 2015-06-06 17:18:34 +02:00 by David Krupicz · 17 comments

System Information
windows XP / ati radeon hd 5700 (yeah I know, I need a new computer... :(

Blender Version
Broken: http://download.blender.org/release/Blender2.75/ 2.75 test build windows 32bit
Worked: 2.74

Blender crashes and closes when I hit f12 to render on this scene:

klf405 RWK frames R - depsgraph test - dev ver.blend

I tried this with the new depsgraph ON and OFF, same result: crash

Exact steps for others to reproduce the error
load this blend, hit f12, watch blender say bye-bye :(

**System Information** windows XP / ati radeon hd 5700 (yeah I know, I need a new computer... :( **Blender Version** Broken: http://download.blender.org/release/Blender2.75/ 2.75 test build windows 32bit Worked: 2.74 Blender crashes and closes when I hit f12 to render on this scene: [klf405 RWK frames R - depsgraph test - dev ver.blend](https://archive.blender.org/developer/F186340/klf405_RWK_frames_R_-_depsgraph_test_-_dev_ver.blend) I tried this with the new depsgraph ON and OFF, same result: crash **Exact steps for others to reproduce the error** load this blend, hit f12, watch blender say bye-bye :(
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @dkrupicz

Added subscriber: @dkrupicz
Member

Added subscriber: @Blendify

Added subscriber: @Blendify
Member

I have no problem

I have no problem

Added subscriber: @mib2berlin

Added subscriber: @mib2berlin

Can verify with Blender 2.74 Testbuild1 and Blender master e708042.

Opensuse 13.2/64
Intel i5 3770K
GTX 760 4 GB
Driver 352.09

Cheers, mib

Can verify with Blender 2.74 Testbuild1 and Blender master e708042. Opensuse 13.2/64 Intel i5 3770K GTX 760 4 GB Driver 352.09 Cheers, mib

Added subscriber: @mont29

Added subscriber: @mont29

Cannot reproduce the crash here with latest master, even with a debug build with asan.

Cannot reproduce the crash here with latest master, even with a debug build with asan.

Btw, please always attach your files here, we need to be sure to find them even in a month or two if needed.

klf405 RWK frames R - depsgraph test - dev ver.blend

Btw, please always attach your files here, we need to be sure to find them even in a month or two if needed. [klf405 RWK frames R - depsgraph test - dev ver.blend](https://archive.blender.org/developer/F186340/klf405_RWK_frames_R_-_depsgraph_test_-_dev_ver.blend)

Hi, build latest master c5748f3 and get crash again.
If needed I can build debug build, this is BT from regular build.

Program received signal SIGSEGV, Segmentation fault.
[Switching to Thread 0x7fffb6ffd700 (LWP 7489)]
0x0000000000f5d538 in ntreeGetThreadStack ()
Missing separate debuginfos, use: zypper install libFLAC8-debuginfo-1.3.0-4.4.1.x86_64 libGLEW1_10-debuginfo-1.10.0-2.3.1.x86_64 libGLU1-debuginfo-9.0.0-9.1.3.x86_64 libHalf11-debuginfo-2.1.0-3.1.2.x86_64 libIex-2_1-11-debuginfo-2.1.0-3.1.2.x86_64 libIlmImf-Imf_2_1-21-debuginfo-2.1.0-5.1.3.x86_64 libIlmThread-2_1-11-debuginfo-2.1.0-3.1.2.x86_64 libImath-2_1-11-debuginfo-2.1.0-3.1.2.x86_64 libX11-6-debuginfo-1.6.2-5.1.2.x86_64 libXau6-debuginfo-1.0.8-5.1.2.x86_64 libXcursor1-debuginfo-1.1.14-5.1.2.x86_64 libXext6-debuginfo-1.3.3-2.1.2.x86_64 libXfixes3-debuginfo-5.0.1-4.1.2.x86_64 libXi6-debuginfo-1.7.4-2.1.2.x86_64 libXrender1-debuginfo-0.9.8-4.1.2.x86_64 libXxf86vm1-debuginfo-1.1.3-4.1.2.x86_64 libdbus-1-3-debuginfo-1.8.16-16.1.x86_64 libfftw3-3-debuginfo-3.3.4-2.1.5.x86_64 libfreetype6-debuginfo-2.5.3-2.4.1.x86_64 libgcc_s1-debuginfo-4.8.3+r212056-2.2.4.x86_64 libgcrypt20-debuginfo-1.6.1-8.3.1.x86_64 libgomp1-debuginfo-4.8.3+r212056-2.2.4.x86_64 libgpg-error0-debuginfo-1.15-1.2.x86_64 libjbig2-debuginfo-2.1-2.1.2.x86_64 libjpeg8-debuginfo-8.0.2-30.5.1.x86_64 libjson-c2-debuginfo-0.12-1.1.x86_64 liblzma5-debuginfo-5.0.7-1.1.x86_64 libnuma1-debuginfo-2.0.9-5.1.2.x86_64 libogg0-debuginfo-1.3.1-2.1.2.x86_64 libopenal1-debuginfo-1.15.1-4.1.3.x86_64 libopenjpeg1-debuginfo-1.5.2-2.1.8.x86_64 libopenssl1_0_0-debuginfo-1.0.1k-2.20.1.x86_64 libpng12-0-debuginfo-1.2.51-3.1.2.x86_64 libpng16-16-debuginfo-1.6.13-2.4.1.x86_64 libpulse0-debuginfo-5.0-4.21.1.x86_64 libpython3_4m1_0-debuginfo-3.4.1-4.2.1.x86_64 libsndfile1-debuginfo-1.0.25-19.4.1.x86_64 libspeex1-debuginfo-1.1.999_1.2rc1-23.1.2.x86_64 libstdc++6-debuginfo-4.8.3+r212056-2.2.4.x86_64 libtiff5-debuginfo-4.0.3-10.7.1.x86_64 libvorbis0-debuginfo-1.3.4-3.1.4.x86_64 libvorbisenc2-debuginfo-1.3.4-3.1.4.x86_64 libxcb1-debuginfo-1.11-2.1.2.x86_64 libz1-debuginfo-1.2.8-5.1.2.x86_64 opencl-1.2-intel-cpu-debuginfo-5.0.0.57-1.x86_64 systemd-debuginfo-210-25.16.1.x86_64
(gdb) bt
- 0  0x0000000000f5d538 in ntreeGetThreadStack ()
- 1  0x0000000000f56955 in ntreeShaderExecTree ()
- 2  0x0000000000c3670b in shade_input_do_shade ()
- 3  0x0000000000c3b3e6 in shade_samples ()
- 4  0x0000000000c19b00 in shadeDA_tile ()
- 5  0x0000000000c1be8b in zbufshadeDA_tile ()
- 6  0x0000000000c0890c in do_render_thread ()
- 7  0x00007ffff31ae0a4 in start_thread () from /lib64/libpthread.so.0
#8  0x00007ffff2ce008d in clone () from /lib64/libc.so.6
(gdb) 

Cheers, mib

Hi, build latest master c5748f3 and get crash again. If needed I can build debug build, this is BT from regular build. ``` Program received signal SIGSEGV, Segmentation fault. [Switching to Thread 0x7fffb6ffd700 (LWP 7489)] 0x0000000000f5d538 in ntreeGetThreadStack () Missing separate debuginfos, use: zypper install libFLAC8-debuginfo-1.3.0-4.4.1.x86_64 libGLEW1_10-debuginfo-1.10.0-2.3.1.x86_64 libGLU1-debuginfo-9.0.0-9.1.3.x86_64 libHalf11-debuginfo-2.1.0-3.1.2.x86_64 libIex-2_1-11-debuginfo-2.1.0-3.1.2.x86_64 libIlmImf-Imf_2_1-21-debuginfo-2.1.0-5.1.3.x86_64 libIlmThread-2_1-11-debuginfo-2.1.0-3.1.2.x86_64 libImath-2_1-11-debuginfo-2.1.0-3.1.2.x86_64 libX11-6-debuginfo-1.6.2-5.1.2.x86_64 libXau6-debuginfo-1.0.8-5.1.2.x86_64 libXcursor1-debuginfo-1.1.14-5.1.2.x86_64 libXext6-debuginfo-1.3.3-2.1.2.x86_64 libXfixes3-debuginfo-5.0.1-4.1.2.x86_64 libXi6-debuginfo-1.7.4-2.1.2.x86_64 libXrender1-debuginfo-0.9.8-4.1.2.x86_64 libXxf86vm1-debuginfo-1.1.3-4.1.2.x86_64 libdbus-1-3-debuginfo-1.8.16-16.1.x86_64 libfftw3-3-debuginfo-3.3.4-2.1.5.x86_64 libfreetype6-debuginfo-2.5.3-2.4.1.x86_64 libgcc_s1-debuginfo-4.8.3+r212056-2.2.4.x86_64 libgcrypt20-debuginfo-1.6.1-8.3.1.x86_64 libgomp1-debuginfo-4.8.3+r212056-2.2.4.x86_64 libgpg-error0-debuginfo-1.15-1.2.x86_64 libjbig2-debuginfo-2.1-2.1.2.x86_64 libjpeg8-debuginfo-8.0.2-30.5.1.x86_64 libjson-c2-debuginfo-0.12-1.1.x86_64 liblzma5-debuginfo-5.0.7-1.1.x86_64 libnuma1-debuginfo-2.0.9-5.1.2.x86_64 libogg0-debuginfo-1.3.1-2.1.2.x86_64 libopenal1-debuginfo-1.15.1-4.1.3.x86_64 libopenjpeg1-debuginfo-1.5.2-2.1.8.x86_64 libopenssl1_0_0-debuginfo-1.0.1k-2.20.1.x86_64 libpng12-0-debuginfo-1.2.51-3.1.2.x86_64 libpng16-16-debuginfo-1.6.13-2.4.1.x86_64 libpulse0-debuginfo-5.0-4.21.1.x86_64 libpython3_4m1_0-debuginfo-3.4.1-4.2.1.x86_64 libsndfile1-debuginfo-1.0.25-19.4.1.x86_64 libspeex1-debuginfo-1.1.999_1.2rc1-23.1.2.x86_64 libstdc++6-debuginfo-4.8.3+r212056-2.2.4.x86_64 libtiff5-debuginfo-4.0.3-10.7.1.x86_64 libvorbis0-debuginfo-1.3.4-3.1.4.x86_64 libvorbisenc2-debuginfo-1.3.4-3.1.4.x86_64 libxcb1-debuginfo-1.11-2.1.2.x86_64 libz1-debuginfo-1.2.8-5.1.2.x86_64 opencl-1.2-intel-cpu-debuginfo-5.0.0.57-1.x86_64 systemd-debuginfo-210-25.16.1.x86_64 (gdb) bt - 0 0x0000000000f5d538 in ntreeGetThreadStack () - 1 0x0000000000f56955 in ntreeShaderExecTree () - 2 0x0000000000c3670b in shade_input_do_shade () - 3 0x0000000000c3b3e6 in shade_samples () - 4 0x0000000000c19b00 in shadeDA_tile () - 5 0x0000000000c1be8b in zbufshadeDA_tile () - 6 0x0000000000c0890c in do_render_thread () - 7 0x00007ffff31ae0a4 in start_thread () from /lib64/libpthread.so.0 #8 0x00007ffff2ce008d in clone () from /lib64/libc.so.6 (gdb) ``` Cheers, mib

Added subscriber: @ideasman42

Added subscriber: @ideasman42

Also can't redo the crash, @mib2berlin, if you could redo with a debug build that'd be helpful.

Also can't redo the crash, @mib2berlin, if you could redo with a debug build that'd be helpful.

I can redo with debug build Blender 9927849, fe47d3d4, backtrace:

backtrace_T44979.txt

Cheers, mib

I can redo with debug build Blender 9927849, fe47d3d4, backtrace: [backtrace_T44979.txt](https://archive.blender.org/developer/F187301/backtrace_T44979.txt) Cheers, mib
Member

Added subscriber: @MartijnBerger

Added subscriber: @MartijnBerger
Member

To be clear this can crash on both win32 and x64 linux judging from the feedback

To be clear this can crash on both win32 and x64 linux judging from the feedback

This issue was referenced by ec0ba4095f

This issue was referenced by ec0ba4095f9e60057309e6a72e6661170a22a7ee

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
8 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#44979
No description provided.