Fix T44979: Crash when rendering with more threads than the system ones

Revert "Nodes: Remove hardcoded BLENDER_MAX_THREADS number of threads"

This reverts commit fdc653e8ce77a188138dc707207139c3d1e6b166.

The threads override is not affected by the scene, and hence the limit of the
threads was not giving correct result. Need to re-consider some things here.