source/blender/nodes/intern/node_exec.c
@@ -29,7 +29,6 @@
  *  \ingroup nodes
  */
 
-#include <stdlib.h>  /* for abort() */
 
 #include "DNA_node_types.h"
 
@@ -263,7 +262,7 @@ bNodeThreadStack *ntreeGetThreadStack(bNodeTreeExec *exec, int thread)
 {
 	ListBase *lb = &exec->threadstack[thread];
 	bNodeThreadStack *nts;
-	BLI_assert(thread < exec->tot_thread);
+	
 	for (nts = lb->first; nts; nts = nts->next) {
 		if (!nts->used) {
 			nts->used = true;
